add long and short cluster options

--- a/nextflow.config
+++ b/nextflow.config
@@ -4,10 +4,17 @@
 //uncomment for sge cluster
 
 process {
-  executor='sge'
-  //conda="$baseDir/py36.yml"
-  //queue='long'
-  clusterOptions = '-S /bin/bash -cwd -l h_rt=72:00:00,mem_free=6G'
+  withLabel: longtime {
+    executor='sge'
+    //conda="$baseDir/py36.yml"
+    //queue='long'
+    clusterOptions = '-S /bin/bash -cwd -l h_rt=72:00:00,mem_free=6G'
+  }
+  withLabel: shorttime {
+    executor='sge'
+    //queue='short'
+    clusterOptions = '-S /bin/bash -cwd -l h_rt=24:00:00,mem_free=6G'
+  }
 }
 
 
