--- a/conf/mpraflow_py36.yml
+++ b/conf/mpraflow_py36.yml
@@ -16,8 +16,8 @@ dependencies:
   - bokeh=1.3.4=py36_0
   - bwa=0.7.17=h84994c4_5
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2019.5.15=1
-  - certifi=2019.6.16=py36_1
+  - ca-certificates=2019.10.16=0
+  - certifi=2019.9.11=py36_0
   - click=7.0=py36_0
   - cloudpickle=1.2.1=py_0
   - coreutils=8.25=1
@@ -32,6 +32,7 @@ dependencies:
   - distributed=2.3.2=py_1
   - entrypoints=0.3=py36_0
   - expat=2.2.6=he6710b0_0
+  - fastq-join=1.3.1=h2d50403_2
   - fastqc=0.11.8=1
   - font-ttf-dejavu-sans-mono=2.37=h6964260_0
   - fontconfig=2.13.0=h9420a91_0
@@ -101,7 +102,7 @@ dependencies:
   - numpy-base=1.16.4=py36hde5b4d6_0
   - olefile=0.46=py36_0
   - openjdk=8.0.152=h46b5887_1
-  - openssl=1.1.1c=h7b6447c_1
+  - openssl=1.1.1d=h7b6447c_3
   - packaging=19.1=py36_0
   - pandas=0.24.2=py36he6710b0_0
   - pandoc=2.2.3.2=0
@@ -166,3 +167,4 @@ dependencies:
   - zict=1.0.0=py_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
+
