--- a/conf/mpraflow_py36.yml
+++ b/conf/mpraflow_py36.yml
@@ -7,12 +7,13 @@ dependencies:
   - _r-mutex=1.0.0=anacondar_1
   - binutils_impl_linux-64=2.31.1=h6176602_1
   - binutils_linux-64=2.31.1=h6176602_8
+  - biopython=1.74=py36h516909a_0
   - blas=1.0=mkl
   - bokeh=1.4.0=py36_0
   - bwa=0.7.17=hed695b0_6
   - bwidget=1.9.11=1
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2019.11.27=0
+  - ca-certificates=2019.11.28=hecc5488_0
   - cairo=1.14.12=h8948797_3
   - certifi=2019.11.28=py36_0
   - click=7.0=py36_0
@@ -80,7 +81,7 @@ dependencies:
   - numpy-base=1.16.5=py36hde5b4d6_0
   - olefile=0.46=py36_0
   - openjdk=8.0.152=h46b5887_1
-  - openssl=1.1.1d=h7b6447c_3
+  - openssl=1.1.1d=h516909a_0
   - packaging=19.2=py_0
   - pandas=0.24.2=py36he6710b0_0
   - pango=1.42.4=h049681c_0
@@ -115,10 +116,10 @@ dependencies:
   - tktable=2.10=h14c3975_0
   - toolz=0.10.0=py_0
   - tornado=6.0.3=py36h7b6447c_0
+  - tqdm=4.40.2=py_0
   - wheel=0.33.6=py36_0
   - xz=5.2.4=h14c3975_4
   - yaml=0.1.7=had09818_2
   - zict=1.0.0=py_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
-  - biopython
