--- a/conf/mpraflow_py36.yml
+++ b/conf/mpraflow_py36.yml
@@ -5,11 +5,14 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _r-mutex=1.0.0=anacondar_1
+  - arrow-cpp=0.13.0=py36h117bdfb_0
   - binutils_impl_linux-64=2.31.1=h6176602_1
   - binutils_linux-64=2.31.1=h6176602_8
   - biopython=1.74=py36h516909a_0
   - blas=1.0=mkl
   - bokeh=1.4.0=py36_0
+  - boost-cpp=1.68.0=h11c811c_1000
+  - brotli=1.0.7=he1b5a44_1000
   - bwa=0.7.17=hed695b0_6
   - bwidget=1.9.11=1
   - bzip2=1.0.8=h7b6447c_0
@@ -25,6 +28,7 @@ dependencies:
   - dask-core=2.3.0=py_0
   - dbus=1.13.12=h746ee38_0
   - distributed=2.5.2=py_0
+  - double-conversion=3.1.5=he1b5a44_2
   - expat=2.2.6=he6710b0_0
   - fastq-join=1.3.1=h2d50403_2
   - fastqc=0.11.8=2
@@ -35,9 +39,11 @@ dependencies:
   - fsspec=0.6.0=py_0
   - gcc_impl_linux-64=7.3.0=habb00fd_1
   - gcc_linux-64=7.3.0=h553295d_8
+  - gflags=2.2.2=he1b5a44_1002
   - gfortran_impl_linux-64=7.3.0=hdf63c60_1
   - gfortran_linux-64=7.3.0=h553295d_8
   - glib=2.56.2=hd408876_0
+  - glog=0.4.0=he1b5a44_1
   - graphite2=1.3.13=h23475e2_0
   - gsl=2.4=h14c3975_4
   - gst-plugins-base=1.14.0=hbbd80ab_1
@@ -54,13 +60,16 @@ dependencies:
   - jpeg=9b=h024ee3a_2
   - kiwisolver=1.1.0=py36he6710b0_0
   - krb5=1.16.1=h173b8e3_7
+  - libboost=1.67.0=h46d08c1_4
   - libcurl=7.67.0=h20c2e04_0
   - libdeflate=1.3=h516909a_0
   - libedit=3.1.20181209=hc058e9b_0
+  - libevent=2.1.10=h72c5cf5_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libpng=1.6.37=hbc83047_0
+  - libprotobuf=3.6.0=hdbcaa40_0
   - libssh2=1.8.2=h1ba5d50_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.1.0=h2733197_0
@@ -68,6 +77,7 @@ dependencies:
   - libxcb=1.13=h1bed415_1
   - libxml2=2.9.9=hea5a465_1
   - locket=0.2.0=py36_1
+  - lz4-c=1.8.3=he1b5a44_1001
   - make=4.2.1=h1bed415_1
   - markupsafe=1.1.1=py36h7b6447c_0
   - matplotlib=3.1.1=py36h5429711_0
@@ -85,6 +95,7 @@ dependencies:
   - packaging=19.2=py_0
   - pandas=0.24.2=py36he6710b0_0
   - pango=1.42.4=h049681c_0
+  - parquet-cpp=1.5.1=2
   - partd=1.1.0=py_0
   - pcre=8.43=he6710b0_0
   - perl=5.26.2=h14c3975_0
@@ -93,6 +104,7 @@ dependencies:
   - pip=19.3.1=py36_0
   - pixman=0.38.0=h7b6447c_0
   - psutil=5.6.7=py36h7b6447c_0
+  - pyarrow=0.13.0=py36h0978efd_0
   - pyparsing=2.4.5=py_0
   - pyqt=5.9.2=py36h05f1152_2
   - pysam=0.15.3=py36hbcae180_3
@@ -102,6 +114,7 @@ dependencies:
   - pyyaml=5.1.2=py36h7b6447c_0
   - qt=5.9.7=h5867ecd_1
   - r-base=3.6.1=h9bb98a2_1
+  - re2=2019.12.01=he1b5a44_0
   - readline=7.0=h7b6447c_5
   - samtools=1.9=h10a08f8_12
   - scikit-learn=0.21.3=py36hd81dba3_0
@@ -109,9 +122,11 @@ dependencies:
   - setuptools=42.0.2=py36_0
   - sip=4.19.8=py36hf484d3e_0
   - six=1.13.0=py36_0
+  - snappy=1.1.7=he1b5a44_1002
   - sortedcontainers=2.1.0=py36_0
   - sqlite=3.30.1=h7b6447c_0
   - tblib=1.5.0=py_0
+  - thrift-cpp=0.11.0=h02b749d_3
   - tk=8.6.8=hbc83047_0
   - tktable=2.10=h14c3975_0
   - toolz=0.10.0=py_0
