--- a/conf/mpraflow_r.yml
+++ b/conf/mpraflow_r.yml
@@ -6,7 +6,7 @@ dependencies:
   - _libgcc_mutex=0.1=main
   - _r-mutex=1.0.0=anacondar_1
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2019.11.27=0
+  - ca-certificates=2019.11.28=hecc5488_0
   - cairo=1.14.6=4
   - curl=7.52.1=0
   - fontconfig=2.12.1=6
@@ -27,7 +27,7 @@ dependencies:
   - libtiff=4.0.7=0
   - libxml2=2.9.5=0
   - ncurses=5.9=10
-  - openssl=1.0.2t=h7b6447c_1
+  - openssl=1.0.2t=h14c3975_0
   - pango=1.40.4=0
   - pcre=8.43=he6710b0_0
   - pixman=0.34.0=hceecf20_3
@@ -40,6 +40,7 @@ dependencies:
   - r-digest=0.6.12=r3.3.2_0
   - r-dplyr=0.5.0=r3.3.2_1
   - r-ggplot2=2.2.1=r3.3.2_0
+  - r-glue=1.2.0=r3.3.2_0
   - r-gtable=0.2.0=r3.3.2_0
   - r-labeling=0.3=r3.3.2_2
   - r-lazyeval=0.2.0=r3.3.2_0
@@ -47,14 +48,18 @@ dependencies:
   - r-mass=7.3_45=r3.3.2_0
   - r-munsell=0.4.3=r3.3.2_0
   - r-plyr=1.8.4=r3.3.2_0
+  - r-purrr=0.2.4=r3.3.2_0
   - r-r6=2.2.0=r3.3.2_0
   - r-rcolorbrewer=1.1_2=r3.3.2_3
   - r-rcpp=0.12.8=r3.3.2_0
   - r-reshape2=1.4.2=r3.3.2_0
+  - r-rlang=0.2.0=r3.3.2_0
   - r-scales=0.4.1=r3.3.2_1
   - r-stringi=1.1.2=r3.3.2_0
   - r-stringr=1.1.0=r3.3.2_0
   - r-tibble=1.2=r3.3.2_1
+  - r-tidyr=0.7.1=r3.3.2_0
+  - r-tidyselect=0.2.4=r3.3.2_0
   - readline=6.2=0
   - tk=8.5.19=2
   - xz=5.2.4=h14c3975_4
