--- a/nextflow.config
+++ b/nextflow.config
@@ -1,19 +1,19 @@
 //leave all process commented out to run in local mode
 
 //uncomment for sge cluster
-process {
-  withLabel: longtime {
-    executor='sge'
-    //conda="$baseDir/py36.yml"
-    //queue='long'
-    clusterOptions = '-S /bin/bash -cwd -l h_rt=72:00:00,mem_free=6G'
-  }
-  withLabel: shorttime {
-    executor='sge'
-    //queue='short'
-    clusterOptions = '-S /bin/bash -cwd -l h_rt=24:00:00,mem_free=6G'
-  }
-}
+//process {
+//  withLabel: longtime {
+//    executor='sge'
+//    //conda="$baseDir/py36.yml"
+//    //queue='long'
+//    clusterOptions = '-S /bin/bash -cwd -l h_rt=72:00:00,mem_free=6G'
+//  }
+//  withLabel: shorttime {
+//    executor='sge'
+//    //queue='short'
+//    clusterOptions = '-S /bin/bash -cwd -l h_rt=24:00:00,mem_free=6G'
+//  }
+//}
 
 conda.createTimeout = '1 h'
 
