- adding defalut outdir "outs" to satmutWorkflow - extracting cluster config to separate config file. - using a global config file for versioning

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,35 +1,6 @@
-//leave all process commented out to run in local mode
-
-//uncomment for sge cluster
-//process {
-//  withLabel: longtime {
-//    executor='sge'
-//    //conda="$baseDir/py36.yml"
-//    //queue='long'
-//    clusterOptions = '-S /bin/bash -cwd -l h_rt=72:00:00,mem_free=6G'
-//  }
-//  withLabel: shorttime {
-//    executor='sge'
-//    //queue='short'
-//    clusterOptions = '-S /bin/bash -cwd -l h_rt=24:00:00,mem_free=6G'
-//  }
-//}
-
 conda.createTimeout = '1 h'
 
-//uncomment for lsf cluster
-//process {
-//  executor='lsf'
-//  clusterOptions = '-S /bin/bash -cwd -l h_rt=24:00:00,mem_free=6G'
-//}
-
-
-
-//uncomment for SLURM cluster
-//process {
-//  executor='slurm'
-//  clusterOptions = '-S /bin/bash -cwd -l h_rt=24:00:00,mem_free=6G'
-//}
-
-
-
+// modify this file to run MPRAflow on a cluster with SLURM,SGE,SF,...
+includeConfig 'conf/cluster.config'
+// Global MPRAflow config. Please do not modify this file
+includeConfig 'conf/global.config'
