- setting params version to 2.1-dev - introducing a CHANGELOG - adding changelog to documentation

--- a/conf/global.config
+++ b/conf/global.config
@@ -1,5 +1,5 @@
 //MPRAflow version
-params.version="2.1.1"
+params.version="2.1-dev"
 
 // nextflow version required
 params.nf_required_version="19.10"
