improving documentation. preparing release v2.2

--- a/conf/global.config
+++ b/conf/global.config
@@ -1,5 +1,5 @@
 //MPRAflow version
-params.version="2.1-dev"
+params.version="2.2"
 
 // nextflow version required
 params.nf_required_version="20.01"
