adding highmem config

--- a/conf/cluster.config
+++ b/conf/cluster.config
@@ -14,6 +14,11 @@
 //    //queue='short'
 //    clusterOptions = '-S /bin/bash -cwd -l h_rt=01:00:00,h_vmem=6G'
 //  }
+//  withLabel: highmem {
+//    executor='sge'
+//    //queue='short'
+//    clusterOptions = '-S /bin/bash -cwd -l h_rt=01:00:00,h_vmem=80G'
+//  }
 //}
 
 
@@ -29,6 +34,11 @@
 //    //queue='short'
 //    clusterOptions = '-S /bin/bash -cwd -l h_rt=01:00:00,mem_free=6G'
 //  }
+//  withLabel: highmem {
+//    executor='lsf'
+//    //queue='short'
+//    clusterOptions = '-S /bin/bash -cwd -l h_rt=01:00:00,mem_free=80G'
+//  }
 //}
 
 //uncomment for SLURM cluster
@@ -42,5 +52,10 @@
 //    executor='slurm'
 //    //queue='short'
 //    clusterOptions = '-t 00-01:00:0 --mem=6G'
+//  }
+//  withLabel: highmem {
+//    executor='slurm'
+//    //queue='short'
+//    clusterOptions = '-t 00-01:00:0 --mem=80G'
 //  }
 //}
