--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -3,55 +3,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - alabaster=0.7.12=py_0
-  - babel=2.7.0=py_0
-  - ca-certificates=2019.11.28=hecc5488_0
-  - certifi=2019.11.28=py38_0
-  - cffi=1.13.2=py38h8022711_0
-  - chardet=3.0.4=py38_1003
-  - commonmark=0.9.1=py_0
-  - cryptography=2.8=py38h72c5cf5_1
-  - docutils=0.15.2=py38_0
-  - future=0.18.2=py38_0
-  - idna=2.8=py38_1000
-  - imagesize=1.1.0=py_0
-  - jinja2=2.10.3=py_0
-  - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libffi=3.2.1=he1b5a44_1006
-  - libgcc-ng=9.2.0=hdf63c60_0
-  - libstdcxx-ng=9.2.0=hdf63c60_0
-  - markupsafe=1.1.1=py38h516909a_0
-  - ncurses=6.1=hf484d3e_1002
-  - openssl=1.1.1d=h516909a_0
-  - packaging=19.2=py_0
-  - pip=19.3.1=py38_0
-  - pycparser=2.19=py38_1
-  - pygments=2.5.2=py_0
-  - pyopenssl=19.1.0=py38_0
-  - pyparsing=2.4.5=py_0
-  - pysocks=1.7.1=py38_0
-  - python=3.8.0=h357f687_5
-  - pytz=2019.3=py_0
-  - readline=8.0=hf8c457e_0
-  - recommonmark=0.6.0=py_0
-  - requests=2.22.0=py38_1
-  - setuptools=42.0.2=py38_0
-  - six=1.13.0=py38_0
-  - snowballstemmer=2.0.0=py_0
-  - sphinx=2.3.0=py_0
-  - sphinxcontrib-applehelp=1.0.1=py_0
-  - sphinxcontrib-devhelp=1.0.1=py_0
-  - sphinxcontrib-htmlhelp=1.0.2=py_0
-  - sphinxcontrib-jsmath=1.0.1=py_0
-  - sphinxcontrib-qthelp=1.0.2=py_0
-  - sphinxcontrib-serializinghtml=1.1.3=py_0
-  - sqlite=3.30.1=hcee41ef_0
-  - tk=8.6.10=hed695b0_0
-  - urllib3=1.25.7=py38_0
-  - wheel=0.33.6=py38_0
-  - xz=5.2.4=h14c3975_1001
-  - zlib=1.2.11=h516909a_1006
+  - pip
+  - python
+  - sphinx
+  - rstcheck
+  - recommonmark
   - pip:
-    - sphinx-rtd-theme==0.4.3
-
+      - sphinx-rtd-theme
