--- a/conf/cluster.config
+++ b/conf/cluster.config
@@ -43,4 +43,9 @@
 //    //queue='short'
 //    clusterOptions = '-t 00-01:00:0 --mem=6G'
 //  }
+//  withLabel: highmem {
+//    executor='slurm'
+//    //queue='short'
+//    clusterOptions = '-t 00-20:00:0 --mem=80G'
+//  }
 //}
