--- a/conf/global.config
+++ b/conf/global.config
@@ -1,5 +1,5 @@
 //MPRAflow version
-params.version="2.3.4"
+params.version="2.4-dev"
 
 // nextflow version required
 params.nf_required_version="20.10"
