--- a/nextflow.config
+++ b/nextflow.config
@@ -1,5 +1,7 @@
 conda.createTimeout = '1 h'
 
+conda.useMamba = true
+
 // modify this file to run MPRAflow on a cluster with SLURM,SGE,SF,...
 includeConfig 'conf/cluster.config'
 // Global MPRAflow config. Please do not modify this file
